fix: add wrap behaviour to breadcrumbs

--- a/src/components/bread-crumbs/bread-crumbs.st.css
+++ b/src/components/bread-crumbs/bread-crumbs.st.css
@@ -1,6 +1,8 @@
 .root
 {
     font-family: Caudex, serif;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .separator
